--- a/index.html
+++ b/index.html
@@ -11,6 +11,85 @@
   <div id='main'>
 
     <h2>GitHub Search</h2>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const form = document.getElementById('github-form');
+        const searchInput = document.getElementById('search');
+        const userList = document.getElementById('user-list');
+        const reposList = document.getElementById('repos-list');
+  
+        const baseURL = 'https://api.github.com';
+        const headers = {
+          'Accept': 'application/vnd.github.v3+json'
+        };
+  
+        form.addEventListener('submit', async (event) => {
+          event.preventDefault();
+          const searchTerm = searchInput.value.trim();
+  
+          if (searchTerm === '') {
+            alert('Please enter a GitHub username');
+            return;
+          }
+  
+          try {
+            // Search for users
+            const usersURL = `${baseURL}/search/users?q=${searchTerm}`;
+            const usersResponse = await fetch(usersURL, { headers });
+            const usersData = await usersResponse.json();
+  
+            // Display users
+            displayUsers(usersData.items);
+          } catch (error) {
+            console.error('Error fetching users:', error);
+          }
+        });
+  
+        async function displayUsers(users) {
+          userList.innerHTML = '';
+  
+          users.forEach(user => {
+            const userItem = document.createElement('li');
+            userItem.innerHTML = `
+              <strong>${user.login}</strong> 
+              <img src="${user.avatar_url}" alt="${user.login}" width="50" height="50">
+              <a href="${user.html_url}" target="_blank">Profile</a>
+            `;
+            userItem.addEventListener('click', () => fetchUserRepos(user.login));
+            userList.appendChild(userItem);
+          });
+        }
+  
+        async function fetchUserRepos(username) {
+          try {
+            // Fetch user repositories
+            const reposURL = `${baseURL}/users/${username}/repos`;
+            const reposResponse = await fetch(reposURL, { headers });
+            const reposData = await reposResponse.json();
+  
+            // Display repositories
+            displayRepos(reposData);
+          } catch (error) {
+            console.error('Error fetching repositories:', error);
+          }
+        }
+  
+        function displayRepos(repos) {
+          reposList.innerHTML = '';
+  
+          repos.forEach(repo => {
+            const repoItem = document.createElement('li');
+            repoItem.innerHTML = `
+              <strong>${repo.name}</strong> 
+              <p>Language: ${repo.language}</p>
+              <p>Stars: ${repo.stargazers_count}</p>
+              <a href="${repo.html_url}" target="_blank">Repo Link</a>
+            `;
+            reposList.appendChild(repoItem);
+          });
+        }
+      });
+    </script>
 
     <form id='github-form'>
       <input id='search' type='text' name='search'>
